# selective-capsulorrhaphy-sims-mtlb

./: README.MD
Moco_GHJRF_Constraint/: CMakeLists.txt  MocoGHJRFConstraint.cpp  MocoGHJRFConstraint.h  RegisterTypes_osimMocoGHJRFConstraint.cpp  RegisterTypes_osimMocoGHJRFConstraint.h  osimMocoGHJRFConstraintDLL.h
Moco_GHJRF_Constraint/test/: BaselineModel_ConcentricUpwardReach90_MuscleDriven_50meshPoints_solution.sto  ConcentricUpwardReach105_101nodes_GHJRFconstrained_solution.sto  ExistingUpwardReach90_JointReaction_ReactionLoads.sto  FullShoulderModel.osim  InitialUnconstrainedAbduction.omoco  InitialUnconstrainedMotion.omoco  MocoStudy_solution.sto  README.MD  SecondConstrainedAbduction.omoco  SecondConstrainedMotion.omoco  constrainedStudy.omoco  initialUnconstrained_JointReaction_ReactionLoads.sto  predictSolutionUnconstrained.sto  tempOMOCO.omoco  test_GHJRFConstraint.m  unconstrainedIncomplete_JointReaction_ReactionLoads.sto
ModelFiles/: BasicCapsModel_Anteroinferior.osim  BasicCapsModel_Anterosuperior.osim  BasicCapsModel_None.osim  BasicCapsModel_Posteroinferior.osim  BasicCapsModel_Posterosuperior.osim  BasicCapsModel_TotalAnterior.osim  BasicCapsModel_TotalInferior.osim  BasicCapsModel_TotalPosterior.osim  BasicCapsModel_TotalSuperior.osim  BasicShoulderComplex.osim  BasicShoulderComplex_withBlankDualEBCF.osim  BasicShoulderComplex_withForces.osim  BasicShoulderComplex_withIRCoordinateForce.osim  CustomCoordinateLimitForce_shoulder_elv_by_elv_angle_damping.xml  CustomCoordinateLimitForce_shoulder_elv_by_elv_angle_ligaments.xml  FullShoulderModel.osim  (+17 more)
(+1381 files in other folders)
